--- a/1-dice.html
+++ b/1-dice.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Dice Randomizer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- CSS -->
   <link rel="stylesheet" href="css/styles.css">
   <!-- Bootstrap -->
