fixed viewport issue on mobile

--- a/3-dice.html
+++ b/3-dice.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Dice Randomizer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- CSS -->
   <link rel="stylesheet" href="css/styles.css">
   <!-- Bootstrap -->
@@ -14,31 +15,31 @@
 
   <section id="main-body-dice">
 
-<div class="flexbox-row">
-  <div class="dice-display-2">
+    <div class="flexbox-row">
+      <div class="dice-display-2">
         <img class="dice1" src="images/dice1.png">
-  </div>
-  <div class="dice-display-2">
+      </div>
+      <div class="dice-display-2">
         <img class="dice2" src="images/dice1.png">
-  </div>
-  <div class="dice-display-2">
+      </div>
+      <div class="dice-display-2">
         <img class="dice3" src="images/dice1.png">
-  </div>
-</div>
+      </div>
+    </div>
 
-<div class="two-buttons">
-  <a href="3-dice.html">
-    <div class="randomize-button">
-      randomize
+    <div class="two-buttons">
+      <a href="3-dice.html">
+        <div class="randomize-button">
+          randomize
+        </div>
+      </a>
+      <br>
+      <a href="index.html">
+        <div class="select-button">
+          select number of dice
+        </div>
+      </a>
     </div>
-  </a>
-<br>
-  <a href="index.html">
-    <div class="select-button">
-      select number of dice
-    </div>
-  </a>
-</div>
 
   </section>
 
